k8s/book-list-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-list-deployment
spec:
  replicas: 1
  selector: 
    matchLabels: 
      component: books-list
  template:
    metadata:
      labels: 
        component: books-list
    spec:
      containers:
        - name: books-list-deployment
          image: fabiowso2/bookstore-microservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9099
