k8s/bookstore-microgateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-microgateway-deployment
spec:
  replicas: 1
  selector: 
    matchLabels: 
      component: bookstore-microgateway
  template:
    metadata:
      labels: 
        component: bookstore-microgateway
    spec:
      containers:
        - name: bookstore-microgateway
          image: fabiowso2/bookstore-microgateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              protocol: "TCP"
