k8s/etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-service
spec:
  type: ClusterIP
  selector: 
    component: etcd
  ports:
  ports:
    - port: 2379
      targetPort: 2379
